--- a/package.json
+++ b/package.json
@@ -16,16 +16,25 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-material-kit": "^0.6.0-beta.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.15.0",
+    "react-native-svg": "12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.2",
+    "@types/react-native": "^0.63.50",
+    "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "~25.2.6",
+    "file-loader": "^6.2.0",
     "jest": "~25.2.6",
-    "react-test-renderer": "~16.13.1"
+    "react-test-renderer": "~16.13.1",
+    "typescript": "^4.1.5"
   },
   "jest": {
     "preset": "react-native"
