--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo-google-fonts/red-hat-display": "^0.1.0",
     "expo": "~40.0.0",
+    "expo-font": "~8.4.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
+    "install": "^0.13.0",
+    "npm": "^7.5.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
@@ -20,7 +24,6 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.15.0",
     "react-native-svg": "12.1.0",
-    "react-native-svg-transformer": "^0.14.3",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12"
   },
@@ -33,6 +36,7 @@
     "babel-jest": "~25.2.6",
     "file-loader": "^6.2.0",
     "jest": "~25.2.6",
+    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "~16.13.1",
     "typescript": "^4.1.5"
   },
