--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
-    "react-native-gesture-handler": "^1.8.0",
+    "react-native-elements": "^3.3.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-material-kit": "^0.6.0-beta.1",
+    "react-native-paper": "^3.6.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.2",
     "react-native-svg": "12.1.0",
     "react-native-unimodules": "~0.12.0",
-    "react-native-web": "^0.15.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "^0.15.0",
+    "react-navigation": "^4.4.0",
+    "react-navigation-material-bottom-tabs": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
