--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 import com.android.build.OutputFile
 
@@ -207,6 +208,7 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    
 }
 
 // Run this once to be able to run the application with BUCK
