--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-elements": "^3.3.0",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-material-kit": "^0.6.0-beta.1",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "^1.13.2",
